# dngconvert

./: .gitignore  CMakeLists.txt  COPYING  COPYRIGHT  README  config.h.cmake  dngconvertconfig.h.in  installMac.txt
cmake/: CMakeLists.txt
cmake/modules/: CMakeLists.txt  FindLibRaw.cmake
dnganalyze/: CMakeLists.txt  dnganalyze.cpp
dngcompare/: CMakeLists.txt  dngcompare.cpp
dngconvert/: CMakeLists.txt  dngconvert.cpp  exiv2dngstreamio.cpp  exiv2helper.cpp  exiv2helper.h  exiv2meta.cpp  exiv2meta.h  librawdngdatastream.cpp  librawdngdatastream.h  librawimage.cpp  librawimage.h  rawhelper.cpp  rawhelper.h
dngvalidate/: CMakeLists.txt
libdng/: CMakeLists.txt  dngexif.cpp  dngexif.h  dnghost.cpp  dnghost.h  dngifd.cpp  dngifd.h  dngimagewriter.cpp  dngimagewriter.h  dngmosaicinfo.cpp  dngmosaicinfo.h  dngnegative.cpp  dngnegative.h  dngreadimage.cpp  dngreadimage.h  dngtagcodes.h
libdng/contrib/dng_sdk/: COPYING-ADOBE  dng_sdk_1_3.diff  readme.txt
libdng/contrib/dng_sdk/source/: dng_1d_function.cpp  dng_1d_function.h  dng_1d_table.cpp  dng_1d_table.h  dng_abort_sniffer.cpp  dng_abort_sniffer.h  dng_area_task.cpp  dng_area_task.h  dng_assertions.h  dng_auto_ptr.h  dng_bad_pixels.cpp  dng_bad_pixels.h  dng_bottlenecks.cpp  dng_bottlenecks.h  dng_camera_profile.cpp  dng_camera_profile.h  dng_classes.h  dng_color_space.cpp  dng_color_space.h  dng_color_spec.cpp  dng_color_spec.h  dng_date_time.cpp  dng_date_time.h  dng_errors.h  dng_exceptions.cpp  dng_exceptions.h  dng_exif.cpp  dng_exif.h  dng_fast_module.h  dng_file_stream.cpp  dng_file_stream.h  dng_filter_task.cpp  dng_filter_task.h  dng_fingerprint.cpp  dng_fingerprint.h  dng_flags.h  dng_gain_map.cpp  dng_gain_map.h  dng_globals.cpp  dng_globals.h  (+95 more)
libdng/contrib/xmpsdk/: readme.txt  xmpsdk_5_1_2.diff
libdng/contrib/xmpsdk/public/include/: TXMPFiles.hpp  XMP_Const.h  XMP_Environment.h  XMP_Version.h
libdng/contrib/xmpsdk/public/include/client-glue/: TXMPFiles.incl_cpp  WXMPFiles.hpp
libdng/contrib/xmpsdk/source/XMPCore/: ExpatAdapter.cpp  ParseRDF.cpp  WXMPIterator.cpp  WXMPMeta.cpp  WXMPUtils.cpp  XMPCore_Impl.cpp  XMPCore_Impl.hpp  XMPIterator.cpp  XMPIterator.hpp  XMPMeta-GetSet.cpp  XMPMeta-Parse.cpp  XMPMeta-Serialize.cpp  XMPMeta.cpp  XMPMeta.hpp  XMPUtils-FileInfo.cpp  XMPUtils.cpp  XMPUtils.hpp
libdng/contrib/xmpsdk/source/XMPFiles/: WXMPFiles.cpp  XMPFiles.cpp  XMPFiles.hpp  XMPFiles_Impl.cpp  XMPFiles_Impl.hpp
libdng/contrib/xmpsdk/source/XMPFiles/FileHandlers/: ASF_Handler.cpp  ASF_Handler.hpp  AVCHD_Handler.cpp  AVCHD_Handler.hpp  Basic_Handler.cpp  Basic_Handler.hpp  FLV_Handler.cpp  FLV_Handler.hpp  InDesign_Handler.cpp  InDesign_Handler.hpp  JPEG_Handler.cpp  JPEG_Handler.hpp  MP3_Handler.cpp  MP3_Handler.hpp  MPEG2_Handler.cpp  MPEG2_Handler.hpp  MPEG4_Handler.cpp  MPEG4_Handler.hpp  P2_Handler.cpp  P2_Handler.hpp  PNG_Handler.cpp  PNG_Handler.hpp  PSD_Handler.cpp  PSD_Handler.hpp  PostScript_Handler.cpp  PostScript_Handler.hpp  RIFF_Handler.cpp  RIFF_Handler.hpp  SWF_Handler.cpp  SWF_Handler.hpp  Scanner_Handler.cpp  Scanner_Handler.hpp  SonyHDV_Handler.cpp  SonyHDV_Handler.hpp  TIFF_Handler.cpp  TIFF_Handler.hpp  Trivial_Handler.cpp  Trivial_Handler.hpp  UCF_Handler.cpp  UCF_Handler.hpp  (+4 more)
libdng/contrib/xmpsdk/source/XMPFiles/FormatSupport/: ASF_Support.cpp  ASF_Support.hpp  ID3_Support.hpp  IPTC_Support.cpp  IPTC_Support.hpp  ISOBaseMedia_Support.cpp  ISOBaseMedia_Support.hpp  MOOV_Support.cpp  MOOV_Support.hpp  PNG_Support.cpp  PNG_Support.hpp  PSIR_FileWriter.cpp  PSIR_MemoryReader.cpp  PSIR_Support.hpp  QuickTime_Support.cpp  QuickTime_Support.hpp  RIFF.cpp  RIFF.hpp  RIFF_Support.cpp  RIFF_Support.hpp  ReconcileIPTC.cpp  ReconcileLegacy.cpp  ReconcileLegacy.hpp  ReconcileTIFF.cpp  Reconcile_Impl.cpp  Reconcile_Impl.hpp  SWF_Support.cpp  SWF_Support.hpp  TIFF_FileWriter.cpp  TIFF_MemoryReader.cpp  TIFF_Support.cpp  TIFF_Support.hpp  XDCAM_Support.cpp  XDCAM_Support.hpp  XMPScanner.cpp  XMPScanner.hpp
libdng/contrib/xmpsdk/source/common/: EndianUtils.hpp  ExpatAdapter.hpp  LargeFileAccess.cpp  LargeFileAccess.hpp  UnicodeConversions.cpp  XMLParserAdapter.hpp  XML_Node.cpp  XMP_LibUtils.cpp  XMP_LibUtils.hpp
